# software-renderer

./: .clang-format  CMakeLists.txt  readme.md
data/: box.tga
src/: canvas.h  main.cpp  program.h  renderer.h  utils.h  window.h
src/common/: Input.h  bmp.h  camera.h  canvas.cpp  canvas.h  clipping.h  definitions.h  geometry.h  input.h  key_codes.h  logging.h  model.cpp  model.h  program.cpp  program.h  rasterizer.cpp  rasterizer.h  renderer.h  shader.h  transforms.h  utils.h  window.h
src/examples/: cube.cpp  head.cpp  lines.cpp  model.cpp  moving_rect.cpp  quads_z_check.cpp  random_triangles.cpp  scene.cpp  triangles.cpp  white_noise.cpp
src/platform/: platform.h  platform_dependent.h
src/platform/linux/: convert_key.cpp  convert_key.h  time.cpp  utils.cpp  window.cpp  window.h
src/platform/windows/: time.cpp  utils.cpp  window.h
src/renderer/: bmp.h  camera.h  canvas.cpp  canvas.h  clipping.cpp  clipping.h  geometry.h  input.h  matrix_stack.h  model.cpp  model.h  program.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  transforms.cpp  transforms.h  utils.h  vertex.h  window.h
src/samples/: lines.cpp  model.cpp  moving_rect.cpp  random_triangles.cpp  scene.cpp  triangles.cpp  white_noise.cpp
src/tests/: test_geometry.cpp  test_model.cpp  test_unit.cpp
src/utils/: common.h
